--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -3,70 +3,65 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import org.kordamp.bootstrapfx.scene.layout.Panel?>
 
-
-<Panel maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #024554; -fx-border-radius: 40px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <Pane prefHeight="175.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
+<AnchorPane style="-fx-background-color: #024554;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.frontend_urzisoft.HelloController">
+   <children>
+      <Pane disable="true" prefHeight="175.0" prefWidth="1280.0">
          <children>
-            <Text fill="WHITE" layoutX="14.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Urzisoft Benchmark" wrappingWidth="307.54296875">
+            <Text fill="WHITE" layoutX="25.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Urzisoft Benchmark" wrappingWidth="307.54296875">
                <font>
                   <Font name="Impact" size="54.0" />
                </font>
             </Text>
-            <Separator layoutY="158.0" prefHeight="34.0" prefWidth="1280.0" />
          </children>
       </Pane>
-   </top>
-   <left>
-      <Pane prefHeight="545.0" prefWidth="317.0" BorderPane.alignment="CENTER">
+      <AnchorPane layoutX="44.0" layoutY="243.0" maxHeight="-Infinity" maxWidth="-Infinity">
          <children>
-            <Button layoutX="34.0" layoutY="58.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Home" textFill="WHITE">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onHomeButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Home" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button layoutX="34.0" layoutY="284.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Ledearboard">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="150.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button layoutX="34.0" layoutY="208.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="75.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" stylesheets="@CSS/file.css" text="CPU Test" textFill="WHITE">
                <font>
-                  <Font name="Snap ITC" size="79.0" />
+                  <Font name="Calibri" size="79.0" />
                </font>
-            </Button>
-            <Button alignment="TOP_CENTER" layoutX="34.0" layoutY="133.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="CPU Test">
-               <font>
-                  <Font name="Snap ITC" size="79.0" />
-               </font>
-               <padding>
-                  <Insets top="20.0" />
-               </padding>
                <opaqueInsets>
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button layoutX="34.0" layoutY="358.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="About">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="222.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Ledearboard" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button layoutX="34.0" layoutY="432.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="300.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="About" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Separator layoutX="320.0" layoutY="1.0" orientation="VERTICAL" prefHeight="546.0" prefWidth="3.0" />
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="374.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit" textFill="WHITE">
+               <font>
+                  <Font name="Snap ITC" size="79.0" />
+               </font>
+            </Button>
          </children>
-      </Pane>
-   </left>
-   <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #700000;" BorderPane.alignment="CENTER" />
-   </center>
-</Panel>
+         <padding>
+            <Insets top="10.0" />
+         </padding>
+      </AnchorPane>
+      <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #A8B545;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
+
+      <Separator layoutY="173.0" prefHeight="5.0" prefWidth="1280.0" style="-fx-background-color: #A8B545;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="173.0" />
+      <AnchorPane fx:id="borderpane" layoutX="321.0" layoutY="178.0" maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #61727C;" />
+   </children>
+</AnchorPane>
