--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
@@ -1,11 +1,140 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #53736A; -fx-background-radius: 25;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #53736A;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Text layoutX="271.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+      <Text layoutX="271.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Pane layoutX="14.0" prefHeight="720.0" prefWidth="420.0">
+         <children>
+            <Text fill="WHITE" layoutX="130.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="System Information">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="30.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating System:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="30.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="30.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Motherboard:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="SY_OS" fill="WHITE" layoutX="210.0" layoutY="222.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OS" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="SY_Model" boundsType="VISUAL" fill="WHITE" layoutX="210.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="SY_Motherboard" fill="WHITE" layoutX="210.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating System:" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+      <Pane layoutX="860.0" prefHeight="720.0" prefWidth="420.0" scaleShape="false">
+         <children>
+            <Text fx:id="CPU_Name1" fill="WHITE" layoutX="200.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OS" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="130.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RAM Information">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="20.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Manufacturer:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="20.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Capacity:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="20.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Frequency:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="RAM_Capacity" boundsType="VISUAL" fill="WHITE" layoutX="200.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="RAM_Frequency" fill="WHITE" layoutX="200.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="20.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="RAM_Type" fill="WHITE" layoutX="200.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
+      <Pane layoutX="430.0" prefHeight="720.0" prefWidth="420.0">
+         <children>
+            <Text fill="WHITE" layoutX="138.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPU Information" wrappingWidth="166.458984375">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="31.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="31.0" layoutY="278.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Physical Proccesors:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="31.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Logical Processors:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="CPU_Name" fill="WHITE" layoutX="211.0" layoutY="218.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OS" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="CPU_Physical_Proccesors" boundsType="VISUAL" fill="WHITE" layoutX="211.0" layoutY="276.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Model" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="CPU_Logical_Proccesors" fill="WHITE" layoutX="211.0" layoutY="336.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
    </children>
   
 </AnchorPane>
