--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #53736A;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="550.0" maxWidth="958.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: #53736A;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Text layoutX="271.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" />
-      <Pane layoutX="14.0" prefHeight="720.0" prefWidth="420.0">
+      <Pane prefHeight="550.0" prefWidth="320.0">
          <children>
-            <Text fill="WHITE" layoutX="130.0" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="System Information">
+            <Text fill="WHITE" layoutX="80.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="System Information">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
@@ -40,21 +41,21 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="SY_Motherboard" fill="WHITE" layoutX="210.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating System:" wrappingWidth="200.0">
+            <Text fx:id="SY_Motherboard" fill="WHITE" layoutX="201.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Operating System:" wrappingWidth="105.0">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
          </children>
       </Pane>
-      <Pane layoutX="860.0" prefHeight="720.0" prefWidth="420.0" scaleShape="false">
+      <Pane layoutX="320.0" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
          <children>
             <Text fx:id="CPU_Name1" fill="WHITE" layoutX="200.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="OS" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="130.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RAM Information">
+            <Text fill="WHITE" layoutX="80.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="RAM Information">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
@@ -94,11 +95,12 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
+            <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
          </children>
       </Pane>
-      <Pane layoutX="430.0" prefHeight="720.0" prefWidth="420.0">
+      <Pane layoutX="640.0" prefHeight="550.0" prefWidth="320.0">
          <children>
-            <Text fill="WHITE" layoutX="138.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPU Information" wrappingWidth="166.458984375">
+            <Text fill="WHITE" layoutX="80.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPU Information" wrappingWidth="166.458984375">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
@@ -133,6 +135,7 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
+            <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
          </children>
       </Pane>
    </children>
