--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane style="-fx-background-color: #024554;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.frontend_urzisoft.HelloController">
+<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #024554;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.frontend_urzisoft.HelloController">
    <children>
       <Pane disable="true" prefHeight="175.0" prefWidth="1280.0">
          <children>
@@ -19,7 +19,7 @@
             </Text>
          </children>
       </Pane>
-      <AnchorPane layoutX="44.0" layoutY="243.0" maxHeight="-Infinity" maxWidth="-Infinity">
+      <AnchorPane layoutX="35.0" layoutY="250.0" maxHeight="-Infinity" maxWidth="-Infinity">
          <children>
             <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onHomeButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Home" textAlignment="CENTER" textFill="WHITE">
                <font>
@@ -55,13 +55,10 @@
                </font>
             </Button>
          </children>
-         <padding>
-            <Insets top="10.0" />
-         </padding>
       </AnchorPane>
-      <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #A8B545;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
+      <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #C2C0A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
 
-      <Separator layoutY="173.0" prefHeight="5.0" prefWidth="1280.0" style="-fx-background-color: #A8B545;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="173.0" />
-      <AnchorPane fx:id="borderpane" layoutX="321.0" layoutY="178.0" maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #61727C;" />
+      <Separator layoutY="173.0" prefHeight="5.0" prefWidth="1280.0" style="-fx-background-color: #C2C0A6;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="173.0" />
+      <AnchorPane fx:id="borderpane" layoutX="322.0" layoutY="178.0" maxHeight="958.0" maxWidth="964.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="964.0" style="-fx-background-color: #61727C;" />
    </children>
 </AnchorPane>
