--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -26,7 +28,7 @@
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="150.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test" textFill="WHITE">
+            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="150.0" mnemonicParsing="false" onAction="#onRAMTestButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
@@ -49,11 +51,41 @@
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="374.0" mnemonicParsing="false" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit" textFill="WHITE">
+            <Button fx:id="ExitButton" alignment="CENTER" contentDisplay="CENTER" layoutY="374.0" mnemonicParsing="false" onAction="#onExitButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="155.0" onMouseClicked="#onRAMTestButtonClicked" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/ramFire.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="80.0" onDragDetected="#onCPUTestButtonClicked" onMouseClicked="#onCPUTestButtonClicked" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/cpuFire.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="5.0" onMouseClicked="#onHomeButtonClicked" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/pc-tower.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="225.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/podium.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="380.0" onMouseClicked="#onExitButtonClicked" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/exit.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="305.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../../../Users/sraul/OneDrive/Desktop/information.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Separator layoutX="315.0" layoutY="173.0" orientation="VERTICAL" prefHeight="547.0" prefWidth="7.0" style="-fx-background-color: #C2C0A6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="315.0" AnchorPane.topAnchor="173.0" />
