Added CPUTest-view Added RAMTEST-view Added Leaderboard-view Added About-view Linked the mongoDB with the app

--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/RAM-View.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/RAM-View.fxml
@@ -61,5 +61,6 @@
             </Text>
          </children>
       </Pane>
+      <AnchorPane fx:id="RAMTest_View" layoutX="320.0" prefHeight="550.0" prefWidth="645.0" style="-fx-background-color: #28403D;" />
    </children>
 </AnchorPane>
