--- a/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/CPU-View.fxml
+++ b/Frontend/Frontend Urzisoft/src/main/resources/com/example/frontend_urzisoft/CPU-View.fxml
@@ -11,55 +11,66 @@
 
 <AnchorPane fx:id="borderpaneRAM" maxHeight="550.0" maxWidth="958.0" minHeight="550.0" minWidth="958.0" prefHeight="550.0" prefWidth="958.0" style="-fx-background-color: #53736A;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Pane fx:id="RAM_Info" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
+      <Pane fx:id="CPU_Info" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
          <children>
             <Text fill="WHITE" layoutX="80.0" layoutY="89.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CPU Information">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="20.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
+            <Text fill="WHITE" layoutX="20.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="20.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Physical Processors:">
+            <Text fill="WHITE" layoutX="20.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Physical Processors:">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text boundsType="VISUAL" fill="WHITE" layoutX="150.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="CPU_Name" boundsType="VISUAL" fill="WHITE" layoutX="90.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="20.0" layoutY="273.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Logical Processors:">
+            <Text fill="WHITE" layoutX="20.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Logical Processors:">
                <font>
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fill="WHITE" layoutX="178.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
+            <Text fx:id="Logic_Core" fill="WHITE" layoutX="185.0" layoutY="270.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
             <Separator layoutX="315.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
-            <Button layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #C2C0A6; -fx-background-radius: 10; -fx-alignment: center;" text="Run Test" textAlignment="CENTER" wrapText="true">
+            <Button fx:id="cputest_btn" layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #C2C0A6; -fx-background-radius: 10; -fx-alignment: center;" text="Run Test" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font name="Calibri" size="15.0" />
                </font>
             </Button>
-            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="115.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="70.0" fitWidth="70.0" layoutX="115.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/cpu.png" />
                </image>
             </ImageView>
-            <Text boundsType="VISUAL" fill="WHITE" layoutX="195.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="Phiys_Core" boundsType="VISUAL" fill="WHITE" layoutX="185.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+               <font>
+                  <Font name="Calibri" size="16.0" />
+               </font>
+            </Text>
+            <Text fill="WHITE" layoutX="20.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Base Frequency:">
+               <font>
+                  <Font name="Calibri" size="20.0" />
+               </font>
+            </Text>
+            <Text fx:id="CPU_Freq" fill="WHITE" layoutX="185.0" layoutY="330.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
          </children>
       </Pane>
+      <AnchorPane fx:id="CPUTest_View" layoutX="320.0" prefHeight="550.0" prefWidth="645.0" style="-fx-background-color: #28403D;" />
    </children>
 </AnchorPane>
