Disable buttons on run; Fixed styling

--- a/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/Home-view.fxml
@@ -57,7 +57,7 @@
       </Pane>
       <Pane fx:id="RAM_Info" layoutX="320.0" prefHeight="550.0" prefWidth="320.0" scaleShape="false">
          <children>
-            <Text fx:id="RAM_Manufacturer" fill="WHITE" layoutX="150.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="OS" wrappingWidth="155.0">
+            <Text fx:id="RAM_Manufacturer" fill="#dbf227" layoutX="150.0" layoutY="220.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="OS" wrappingWidth="155.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
@@ -82,12 +82,12 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Capacity" boundsType="VISUAL" fill="WHITE" layoutX="150.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="RAM_Capacity" boundsType="VISUAL" fill="#dbf227" layoutX="150.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Frequency" fill="WHITE" layoutX="150.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="200.0">
+            <Text fx:id="RAM_Frequency" fill="#dbf227" layoutX="150.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
@@ -97,13 +97,13 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Type" fill="WHITE" layoutX="150.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
+            <Text fx:id="RAM_Type" fill="#dbf227" layoutX="150.0" layoutY="400.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
             <Separator layoutX="-5.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
-            <Button fx:id="bank_btn" layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #DBF227; -fx-background-radius: 10; -fx-alignment: center;" text="Select Bank" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <Button fx:id="bank_btn" layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #A3CD32; -fx-background-radius: 10; -fx-alignment: center;" text="Select Bank" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="Calibri Bold" size="19.0" />
                </font>
@@ -137,17 +137,17 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="CPU_Name" fill="WHITE" layoutX="90.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="I10" wrappingWidth="215.0">
+            <Text fx:id="CPU_Name" fill="#dbf227" layoutX="90.0" layoutY="219.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="I10" wrappingWidth="215.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
-            <Text fx:id="CPU_Physical_Processors" boundsType="VISUAL" fill="WHITE" layoutX="200.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="CPU_Physical_Processors" boundsType="VISUAL" fill="#dbf227" layoutX="200.0" layoutY="280.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
-            <Text fx:id="CPU_Logical_Processors" fill="WHITE" layoutX="195.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="100.0">
+            <Text fx:id="CPU_Logical_Processors" fill="#dbf227" layoutX="195.0" layoutY="340.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" wrappingWidth="100.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
