--- a/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/hello-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #024554;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.frontend_urzisoft.HelloController">
+<AnchorPane fx:id="rootPane" maxHeight="720.0" maxWidth="1280.0" minHeight="720.0" minWidth="1280.0" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #024554;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.frontend_urzisoft.HelloController">
    <children>
       <Pane disable="true" prefHeight="175.0" prefWidth="1280.0">
          <children>
@@ -21,19 +21,19 @@
             </Text>
          </children>
       </Pane>
-      <AnchorPane layoutX="35.0" layoutY="250.0" maxHeight="-Infinity" maxWidth="-Infinity">
+      <AnchorPane fx:id="menuPane" layoutX="35.0" layoutY="250.0" maxHeight="-Infinity" maxWidth="-Infinity">
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onHomeButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Home" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="homeButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onHomeButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Home" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="150.0" mnemonicParsing="false" onAction="#onRAMTestButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test" textFill="WHITE">
+            <Button fx:id="ramTestButton" alignment="CENTER" contentDisplay="CENTER" layoutY="150.0" mnemonicParsing="false" onAction="#onRAMTestButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="RAM Test" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="75.0" mnemonicParsing="false" onAction="#onCPUTestButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="CPU Test" textFill="WHITE">
+            <Button fx:id="cpuTestButton" alignment="CENTER" contentDisplay="CENTER" layoutY="75.0" mnemonicParsing="false" onAction="#onCPUTestButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="CPU Test" textFill="WHITE">
                <font>
                   <Font name="Calibri" size="79.0" />
                </font>
@@ -41,47 +41,47 @@
                   <Insets />
                </opaqueInsets>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="222.0" mnemonicParsing="false" onAction="#onLeaderboardButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Ledearboard" textFill="WHITE">
+            <Button fx:id="leaderboardButton" alignment="CENTER" contentDisplay="CENTER" layoutY="222.0" mnemonicParsing="false" onAction="#onLeaderboardButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Ledearboard" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" layoutY="300.0" mnemonicParsing="false" onAction="#onAboutButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="About" textFill="WHITE">
+            <Button fx:id="aboutButton" alignment="CENTER" contentDisplay="CENTER" layoutY="300.0" mnemonicParsing="false" onAction="#onAboutButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #6A8C69; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="About" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <Button fx:id="ExitButton" alignment="CENTER" contentDisplay="CENTER" layoutY="374.0" mnemonicParsing="false" onAction="#onExitButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit" textFill="WHITE">
+            <Button fx:id="exitButton" alignment="CENTER" contentDisplay="CENTER" layoutY="374.0" mnemonicParsing="false" onAction="#onExitButtonClicked" prefHeight="54.0" prefWidth="250.0" style="-fx-background-color: #700000; -fx-background-radius: 40px; -fx-font-size: 25px; -fx-font-family: Calibri;" text="Exit" textFill="WHITE">
                <font>
                   <Font name="Snap ITC" size="79.0" />
                </font>
             </Button>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="155.0" onMouseClicked="#onRAMTestButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="ramTestIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="155.0" onMouseClicked="#onRAMTestButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/ramFire.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="80.0" onDragDetected="#onCPUTestButtonClicked" onMouseClicked="#onCPUTestButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="cpuTestIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="80.0" onDragDetected="#onCPUTestButtonClicked" onMouseClicked="#onCPUTestButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/cpuFire.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="5.0" onMouseClicked="#onHomeButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="homeIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="5.0" onMouseClicked="#onHomeButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/pc-tower.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="225.0" onMouseClicked="#onLeaderboardButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="leaderboardIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="225.0" onMouseClicked="#onLeaderboardButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/podium.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="380.0" onMouseClicked="#onExitButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="exitIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="380.0" onMouseClicked="#onExitButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/exit.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="305.0" onMouseClicked="#onAboutButtonClicked" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="aboutIcon" fitHeight="45.0" fitWidth="45.0" layoutX="190.0" layoutY="305.0" onMouseClicked="#onAboutButtonClicked" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@png/information.png" />
                </image>
