--- a/src/main/resources/com/example/frontend_urzisoft/RAM-View.fxml
+++ b/src/main/resources/com/example/frontend_urzisoft/RAM-View.fxml
@@ -28,7 +28,7 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_TCapacity" boundsType="VISUAL" fill="WHITE" layoutX="150.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="RAM_TCapacity" boundsType="VISUAL" fill="WHITE" layoutX="150.0" layoutY="153.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16; -fx-fill: #DBF227;" text="Model" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
@@ -38,15 +38,15 @@
                   <Font name="Calibri" size="20.0" />
                </font>
             </Text>
-            <Text fx:id="RAM_Type" fill="WHITE" layoutX="80.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Type:">
+            <Text fx:id="RAM_Type" fill="WHITE" layoutX="80.0" layoutY="272.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16; -fx-fill: #DBF227;" text="Type:">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
             </Text>
             <Separator layoutX="315.0" orientation="VERTICAL" prefHeight="550.0" prefWidth="5.0" style="-fx-background-color: #C2C0A6;" />
-            <Button fx:id="ramtest_btn" layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #C2C0A6; -fx-background-radius: 10; -fx-alignment: center;" text="Run Test" textAlignment="CENTER" wrapText="true">
+            <Button fx:id="ramtest_btn" layoutX="115.0" layoutY="448.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="90.0" style="-fx-background-color: #A3CD32; -fx-background-radius: 10; -fx-alignment: center;" text="Run Test" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
-                  <Font name="Calibri" size="15.0" />
+                  <Font name="Calibri Bold" size="19.0" />
                </font>
             </Button>
             <ImageView fitHeight="75.0" fitWidth="75.0" layoutX="119.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
@@ -54,7 +54,7 @@
                   <Image url="@png/ram.png" />
                </image>
             </ImageView>
-            <Text fx:id="RAM_Freq" boundsType="VISUAL" fill="WHITE" layoutX="135.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16;" text="Model" wrappingWidth="200.0">
+            <Text fx:id="RAM_Freq" boundsType="VISUAL" fill="WHITE" layoutX="135.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-size: 16; -fx-fill: #DBF227;" text="Model" wrappingWidth="200.0">
                <font>
                   <Font name="Calibri" size="16.0" />
                </font>
